Fixed issue with profile picture formatting on small screens.

--- a/css/styles.css
+++ b/css/styles.css
@@ -89,6 +89,7 @@ header h1, header h2 , footer h2{
 }
 .profile-img {
   border-radius: 15%;
+  width: 200px;
 }
 
 /* Footer */
@@ -189,17 +190,20 @@ h3 ~ p {
     font-size: 0.9em;
   }
   h1 {
-    font-size: 2.5em;
+    font-size: 2.25em;
   }
   h2 {
-    font-size: 1.5em;
+    font-size: 1.25em;
   }
   h3 {
     font-size: 1em;
   }
   .contact-info img {
-    width: 40px;
-    height: 40px;
+    width: 35px;
+    height: 35px;
+  }
+  .wrap {
+  padding: 25px 20px;
   }
 }
 @media (max-width: 1000px){
@@ -207,6 +211,7 @@ h3 ~ p {
     text-align: center;
   }
   .profile-img {
-    width: 200px;
+    max-width: 100%;
+    height: auto;
   }
 }
